--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.5.5",
     "nodemon": "^1.19.0",
-    "promise": "^8.0.3"
+    "promise": "^8.0.3",
+    "url": "^0.11.0"
   }
 }
